--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   </div>
   <script src='js/Wallet.js'></script>
   <script src='js/Statistics.js'></script>
+  <script src='js/Draw.js'></script>
   <!-- <script src='js/Game.js'></script>
   <script src='js/main.js'></script> -->
 </body>
