--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <script src='js/Statistics.js'></script>
   <script src='js/Draw.js'></script>
   <script src='js/Result.js'></script>
-  <!-- <script src='js/Game.js'></script>
-  <script src='js/main.js'></script> -->
+  <script src='js/Game.js'></script>
+  <script src='js/main.js'></script> 
 </body>
 </html>
